--- a/firstMain/src/main/resources/templates/AddTask.html
+++ b/firstMain/src/main/resources/templates/AddTask.html
@@ -4,58 +4,66 @@
 	  xmlns:form="http://www.w3.org/1999/xhtml">
 <html xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
-<head>    <title>Add Task</title>
+<head>
+	<meta charset="utf-8"/>
 
+	<title>Добавление новой задачи</title>
+
+	<link rel="icon" type="image/png" th:href="@{/favicon.ico}"/>
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+
+	<meta name="ctx" th:content="${#httpServletRequest.getContextPath()}"/>
+	<style>
+        a{
+            color: white;
+        }
+        a:hover {
+            color: white;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
 
-    <div class="container">
+<div class="container">
+	<h1 class="p-3"> Добавить задачу </h1>
+<form th:action="@{/addTask}" th:object="${task}" method="post">
+	<form:form>
+		<table class="table table-bordered">
+			<tr>
+				<th><span>id</span></th>
+				<th><input th:field="*{id}" type="hidden"></th>
+			</tr>
+			<tr>
+				<th><span>Суть задачи для сотрудника</span></th>
+				<th><input th:field="*{title}"></th>
+			</tr>
+			<tr>
+				<th><span>Дата исполнения</span></th>
+				<th><input th:field="*{date}"></th>
+			</tr>
+			<tr>
+				<th><span>Статус</span></th>
+				<th><input th:field="*{status}"></th>
+			</tr>
+			<tr>
+				<th><span>Введите имя исполнителя</span></th>
+				<th><input th:field="*{nameOfEmployee}"></th>
+			</tr>
 
-        <h1 class="p-3">Add Task</h1>
+		</table>
+	</form:form>
+	<p></p>
 
-        <form:form action="/saveTask" method="post" modelAttribute="task">
-
-            <div class="row">
-            	<div class="form-group col-md-12">
-            		<label class="col-md-3" for="title">Title</label>
-            		<div class="col-md-6">
-            		    <form:input type="text" path="title" id="title"
-            		        class="form-control input-sm" required="required" />
-            		</div>
-            	</div>
-            </div>
-
-            <div class="row">
-            	<div class="form-group col-md-12">
-            		<label class="col-md-3" for="date">Date</label>
-            		<div class="col-md-6">
-            			<form:input type="date" path="date" id="date"
-            				class="form-control input-sm" required="required" />
-            		</div>
-            	</div>
-            </div>
-
-            <div class="row">
-            	<div class="form-group col-md-12">
-            		<label class="col-md-3" for="status">Status</label>
-            		<div class="col-md-6">
-            			<form:input type="text" path="status" id="status"
-            				class="form-control input-sm" value="Incomplete" />
-            		</div>
-            	</div>
-            </div>
-
-            <div class="row p-2">
-            	<div class="col-md-2">
-            		<button type="submit" value="Register" class="btn btn-success">Save</button>
-            	</div>
-            </div>
-
-        </form:form>
-
-    </div>
-
-
+	<button type="submit" value="Register" class="btn btn-primary"> Добавить </button>
+	<button type="button" class="btn btn-primary"><a href="/viewTaskList">В список задач</a>
+	</button>
+</form>
+</div>
 </body>
-
 </html>
